fix style
Signed-off-by: edwinhzhang <edwinhzhang@tencent.com>